--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -10,11 +10,19 @@
     <div class="squares square6"></div>
     <div class="squares square7"></div>
     <div class="container">
-      <div class="content-center brand">
-        <h1 class="h1-seo">Clinica Avellaneda</h1>
-        <h3>
-         Somos una clinica en la ciudad de avellaneda 
-        </h3>
+      <div class="content-center">
+        <div class="row">
+          <div class="col-6">
+            <h1 class="h1-seo">Clinica Avellaneda</h1>
+            <h3>
+             Somos una clinica en la ciudad de avellaneda con mas de 30 años brindando servicios 
+            </h3>
+          </div>
+          <div class="col-6">
+            <img alt="Rounded image" src="assets/img/clinicaAvellaneda.jpg" class="img-fluid rounded shadow" style="width: 350px;">
+          </div>
+        </div>
+     
       </div>
     </div>
   </div>
