segunda fecha Recu

--- a/src/app/pages/informes-home/informes-home.component.html
+++ b/src/app/pages/informes-home/informes-home.component.html
@@ -1,1 +1,31 @@
-<p>informes-home works!</p>
+<br>
+<br>
+<div class="row">
+<div class="col-6">
+
+    <div appPanel>
+        <chart [options]="chartOptions1"></chart>
+    </div>
+</div>
+<div class="col-6">
+    
+<div appPanel>
+    <chart [options]="chartOptions2"></chart>
+</div>
+</div>
+</div>
+<br>
+<div class="row">
+    <div class="col-6">
+    
+        <div appPanel>
+            <chart [options]="chartOptions3"></chart>
+        </div>
+    </div>
+    <div class="col-6">
+        
+    <div appPanel>
+        <chart [options]="chartOptions4"></chart>
+    </div>
+    </div>
+    </div>
